<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".SendotpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/enter_the_otp_sent_to"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputcode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputcode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputcode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputcode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputcode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

            <EditText
                android:id="@+id/inputcode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:maxLength="1"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colorTextPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <TextView
            android:id="@+id/counttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn't receive the OTP?"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Resend OTP"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="invisible"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="60dp"
                android:background="@drawable/backgroung_button"
                android:text="@string/verify_otp"
                android:elevation="5dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

    </LinearLayout>


</ScrollView>